races: update React widget and styles

--- a/races.html
+++ b/races.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Races</title>
 
-  <link rel="stylesheet" href="styles.css?v=18"/>
+  <link rel="stylesheet" href="styles.css?v=19"/>
 
   <style>
     /* ---------- scoped styles for the React widget ---------- */
@@ -25,19 +25,16 @@
     /* simple bar chart */
     .react-chart-title{ font-size:13px; font-weight:700; color:#374151; margin-bottom:8px; }
     .react-bars-wrap{ border:1px solid rgba(17,19,24,.10); border-radius:12px; padding:10px; background:#fff; }
-    .react-bars{ display:grid; grid-auto-flow:column; grid-auto-columns:1fr; align-items:end; height:160px; gap:8px; padding:8px 6px 2px; }
-    .react-bar{ position:relative; background:#e5efff; border:1px solid #c7dbff; border-radius:6px 6px 0 0; }
+    .react-bars{ display:grid; grid-auto-flow:column; grid-auto-columns:1fr; align-items:end; height:160px; gap:10px; padding:8px 8px 2px; }
+    .react-bar{ position:relative; background:#e6f0ff; border:1px solid #c7dbff; border-radius:6px 6px 0 0; }
     .react-bar::after{ content:attr(data-miles) " mi"; position:absolute; left:50%; transform:translateX(-50%); bottom:100%; font-size:11px; color:#374151; margin-bottom:4px; white-space:nowrap; }
-    .react-x{ display:grid; grid-auto-flow:column; grid-auto-columns:1fr; gap:8px; margin-top:6px; font-size:11px; color:#6b7280; text-align:center; }
+    .react-x{ display:grid; grid-auto-flow:column; grid-auto-columns:1fr; gap:10px; margin-top:6px; font-size:11px; color:#6b7280; text-align:center; }
 
-    /* medals row (actual medal images) */
-    .react-medals{ display:grid; gap:10px; grid-template-columns:repeat(2, minmax(0,1fr)); }
-    @media (max-width:640px){ .react-medals{ grid-template-columns:1fr; } }
-    .react-medal{ display:grid; grid-template-columns:88px 1fr; gap:12px; align-items:center; border:1px solid rgba(0,0,0,.06); border-radius:12px; padding:10px; background:#fff; }
-    .react-medal .thumb{ width:88px; height:88px; display:grid; place-items:center; border-radius:10px; background:#fff; border:1px solid rgba(0,0,0,.06); overflow:hidden; }
-    .react-medal img{ max-width:100%; max-height:100%; object-fit:contain; display:block; }
-    .react-medal h4{ margin:0 0 2px; font-size:14px; }
-    .react-medal .meta{ font-size:12px; color:#6b7280; }
+    /* strava card */
+    .react-strava{ display:flex; flex-direction:column; gap:10px; }
+    .react-strava .btn{ display:inline-flex; align-items:center; gap:10px; padding:10px 14px; border-radius:10px; background:#fc4c02; color:#fff; border:0; font-weight:700; cursor:pointer; text-decoration:none; width:max-content; }
+    .react-strava .btn:hover{ filter:brightness(.95); }
+    .react-strava small{ color:#6b7280; }
 
     /* race cards */
     .react-stack{ display:grid; gap:16px; }
@@ -52,18 +49,22 @@
 
     .react-title{ margin:0; font-size:16px; }
     .react-meta{ color:#6b7280; font-size:12px; }
-    .react-text{ margin:2px 0 0; font-size:15px; line-height:1.55; color:#111318; }
-    .react-bullets{ margin:4px 0 0 18px; color:#374151; font-size:14px; }
 
     .react-stats{ display:grid; grid-template-columns:repeat(3, minmax(0,1fr)); gap:8px; }
     .react-stat{ background:#fff; border:1px solid rgba(0,0,0,.06); border-radius:10px; padding:8px; text-align:center; box-shadow:0 6px 18px rgba(0,0,0,.05); }
     .react-stat-number{ font-weight:800; letter-spacing:.2px; font-size:20px; background:linear-gradient(90deg,#1d4ed8,#06b6d4); -webkit-background-clip:text; background-clip:text; color:transparent; }
     .react-stat-label{ font-size:12px; color:#6b7280; margin-top:2px; }
 
-    .react-tags{ display:flex; flex-wrap:wrap; gap:6px; margin-top:2px; }
+    .react-tags{ display:flex; flex-wrap:wrap; gap:6px; }
     .react-tag{ font-size:12px; padding:3px 6px; border:1px solid rgba(17,19,24,.12); border-radius:999px; background:#fff; color:#374151; }
     .react-pr{ color:#0ea5e9; font-weight:700; }
 
+    .react-story p{ margin:8px 0; font-size:15px; line-height:1.6; color:#111318; }
+    .react-goal{ display:flex; align-items:center; gap:10px; }
+    .react-goalbar{ flex:1; height:8px; border-radius:999px; background:#eef2ff; overflow:hidden; border:1px solid #dbe3ff; }
+    .react-goalbar > span{ display:block; height:100%; background:linear-gradient(90deg,#22c55e,#3b82f6); width:0; transition:width .6s ease; }
+    .react-goal small{ color:#6b7280; }
+    .react-note{ font-size:12px; color:#6b7280; }
     /* slider (no crop) */
     .react-slider{ position:relative; width:100%; border-radius:14px; overflow:hidden; background:#fff; }
     .react-slides{ display:grid; grid-auto-flow:column; grid-auto-columns:100%; transition: transform .35s ease; }
@@ -110,6 +111,9 @@
   <script type="text/babel">
     const { useEffect, useRef, useState } = React;
 
+    /* ------------ CONFIG ------------- */
+    const STRAVA_ATHLETE_ID = "YOUR_ATHLETE_ID"; // put your Strava athlete id here
+
     /* ------------ DATA ------------- */
     const RACES = [
       {
@@ -118,17 +122,14 @@
         dateLabel: "July 27, 2025",
         title: "San Francisco 10K",
         distance: 6.2,
-        trainingMiles: 120,             // update if you want
-        finishSeconds: 4200,            // keep in seconds; edit time here, pace updates everywhere
-        description:
-          "Ran side-by-side with my girlfriend while we were in SF for the summer. Cool air, rolling streets, easy to smile the whole way.",
-        bullets: [
-          "Course: rolling streets + cool coastal air",
-          "Fuel: water only — gel pre-start",
-          "Shoes: Hoka Clifton 9",
-          "Next goal: stronger middle miles",
+        trainingMiles: 120,
+        finishSeconds: 4200,           // 1:10:00
+        goalSeconds: 4200,             // goal exactly matched (example)
+        description: [
+          "We were spending the summer in SF, so this felt like a hometown run for a few months. Cool air off the bay, little pockets of cheering on random corners, and no pressure beyond keeping pace together.",
+          "We settled into a steady clip early and tried not to get greedy on the hills. Around mile four the city woke up—coffee smells, streetcars, the whole thing—which made the last stretch go by fast. It was a happy run. We crossed side-by-side and immediately started a list of other races we want to try."
         ],
-        medal: "images/medals/sf10k-medal.jpg",  // <- put the medal photo here
+        tags: ["Course: rolling streets", "Fuel: water only + gel pre-start", "Shoes: Hoka Clifton 9"],
         media: [
           { type: "img", src: "images/races/SF10K.JPG",  alt: "San Francisco 10K" },
           { type: "img", src: "images/races/SF10K1.JPG", alt: "San Francisco 10K — finish" },
@@ -141,16 +142,13 @@
         title: "Surf City Marathon",
         distance: 26.2,
         trainingMiles: 820,
-        finishSeconds: 14280,           // e.g. 3:58:00; change as needed
-        description:
-          "First full. Windy along PCH, big crowd energy, and a sub-4 that felt massive.",
-        bullets: [
-          "Course: out-and-back along PCH",
-          "Fuel: gels + electrolytes every 5–6 miles",
-          "Shoes: Hoka Clifton 9",
-          "Next goal: stronger last 10K",
+        finishSeconds: 14280,          // 3:58:00
+        goalSeconds: 14400,            // goal 4:00:00
+        description: [
+          "My first full. The start line felt like a block party—cowbells, flags, a salty wind that kept pressing the bib into my shirt. I knew sub-4 was right on the edge for me, so the plan was boring on purpose: relax through 13, stay patient to 20, fight smart from there.",
+          "The PCH wind played games. A few miles felt free, then you’d round a bend and hit a blow dryer. I kept the gels coming and tried to be a metronome. At mile 24 I did the math and realized sub-4 was still alive if I held on. The last mile was loud and wobbly and perfect. 3:58:00—nothing fancy, just a line crossed that used to be impossible."
         ],
-        medal: "images/medals/surfcity-medal.jpg", // <- put the marathon medal photo here
+        tags: ["Course: PCH out-and-back", "Fuel: gels + electrolytes every 5-6 mi", "Shoes: Hoka Clifton 9"],
         media: [
           { type: "img",   src: "images/races/SurfCity1.JPG", alt: "Surf City — finish" },
           { type: "img",   src: "images/races/SurfCity2.JPG", alt: "Surf City — course" },
@@ -165,16 +163,13 @@
         title: "Long Beach Half Marathon",
         distance: 13.1,
         trainingMiles: 471,
-        finishSeconds: 7140,            // 1:59:00
-        description:
-          "Half with Emma. Messy training, early morning, and a sub-2 that still makes me grin.",
-        bullets: [
-          "Course: flat waterfront + coastal breeze",
-          "Fuel: gels + water at every station",
-          "Shoes: Hoka Clifton 9",
-          "Next time: try for a negative split",
+        finishSeconds: 7140,           // 1:59:00
+        goalSeconds: 7200,             // goal 2:00:00
+        description: [
+          "Emma talked me into this one and I’m glad she did. We trained in chaotic bursts between school stuff and late dinners. Race morning was sleepy-quiet—the kind where the ocean looks flat and silver—and then the horn went and the course got fun.",
+          "I kept things easy until halfway, waited for the brain gremlins around mile 10, and then tried to run through them. The final mile was just me counting light poles and thinking about pancakes. We sneaked under two hours and got breakfast. That’s a good day."
         ],
-        medal: "images/medals/longbeach-medal.jpg", // optional
+        tags: ["Course: flat waterfront", "Fuel: gels + water at stations", "Shoes: Hoka Clifton 9"],
         media: [
           { type: "img", src: "images/races/LongBeachHalf1.JPG", alt: "Long Beach Half — medal" },
           { type: "img", src: "images/races/LongBeachHalf2.JPG", alt: "Long Beach Half — cheering squad" },
@@ -283,42 +278,31 @@
       );
     }
 
-    function TagRow({ race, fastestPace }){
-      const tags=[];
-      race.bullets.forEach(b=>{
-        const [k,v] = b.split(":"); if(!v) return;
-        const key=k.trim(), val=v.trim();
-        if(key==="Course") tags.push(val);
-        if(key==="Fuel")   tags.push(`Fuel: ${val}`);
-        if(key==="Shoes")  tags.push(`Shoes: ${val}`);
-      });
-      const myPace = race.finishSeconds / race.distance;
-      const isPR = Math.abs(myPace - fastestPace) < 0.01; // within ~0.6 sec/mi
+    function TagRow({ tags }){
       return (
         <div className="react-tags">
-          <span className="react-tag">Avg pace: {paceStr(myPace)}{isPR ? " · " : ""}</span>
-          {isPR && <span className="react-tag react-pr">PR</span>}
           {tags.map((t,i)=><span className="react-tag" key={i}>{t}</span>)}
         </div>
       );
     }
 
-    function MedalCard({ race }){
-      const src = race.medal || (race.media.find(m=>m.type==="img")||{}).src;
-      const p = race.finishSeconds / race.distance;
+    function GoalMeter({ finishSeconds, goalSeconds }){
+      const pct = Math.min(100, Math.max(0, (goalSeconds>0 ? (goalSeconds/finishSeconds)*100 : 0)));
+      // If you beat the goal, pct > 100 → clamp to 100 visually, show delta in text.
+      const delta = finishSeconds - goalSeconds;
+      const sign = delta <= 0 ? "faster" : "slower";
+      const abs = Math.abs(delta);
       return (
-        <div className="react-medal">
-          <div className="thumb">
-            {src ? <img src={src} alt={`${race.title} medal`}/> : <div className="meta">No medal image yet</div>}
+        <div className="react-goal">
+          <div className="react-goalbar" aria-hidden="true">
+            <span style={{ width: `${Math.min(100, (finishSeconds/goalSeconds)*100)}%` }}></span>
           </div>
-          <div>
-            <h4>{race.title}</h4>
-            <div className="meta">{race.dateLabel} · {race.distance} mi · {formatTime(race.finishSeconds)} ({paceStr(p)})</div>
-          </div>
+          <small>{formatTime(finishSeconds)} vs goal {formatTime(goalSeconds)} · {formatTime(abs)} {sign}</small>
         </div>
       );
     }
 
+    /* ------------ race card ------------- */
     function RaceCard({ race, fastestPace }) {
       const pace = race.finishSeconds / race.distance;
       return (
@@ -343,15 +327,33 @@
                 <StatTile label="avg pace" value={paceStr(pace)} />
               </div>
 
-              <TagRow race={race} fastestPace={fastestPace} />
+              <TagRow tags={race.tags} />
 
-              <p className="react-text">{race.description}</p>
-              <ul className="react-bullets">
-                {race.bullets.map((b,i)=><li key={i}>{b}</li>)}
-              </ul>
+              {race.goalSeconds && <GoalMeter finishSeconds={race.finishSeconds} goalSeconds={race.goalSeconds} />}
+
+              <div className="react-story">
+                {race.description.map((p,i)=><p key={i}>{p}</p>)}
+              </div>
+
+              <div className="react-note">Photos/videos show full size—no cropping.</div>
             </div>
           </div>
         </section>
+      );
+    }
+
+    /* ------------ strava follow ------------- */
+    function StravaCard(){
+      const url = STRAVA_ATHLETE_ID ? `https://www.strava.com/athletes/${STRAVA_ATHLETE_ID}` : null;
+      return (
+        <div className="react-card react-strava">
+          <div style={{fontSize:13, fontWeight:700, color:"#374151"}}>Follow me on Strava</div>
+          <a className="btn" href={url || "#"} target="_blank" rel="noreferrer">
+            <svg width="18" height="18" viewBox="0 0 48 48" aria-hidden="true"><path fill="#fff" d="M27.7 27.4l6.2 10.6 6.3-10.6h-4.8L33.9 34l-3.6-6.6h-2.6zm-6.7-19L4.7 42.3h9.8l3.4-6.3h8.7l-6.5-11.5 4.4-8.2 8.1 14.5h5L21 8.4z"/></svg>
+            Follow on Strava
+          </a>
+          <small>Training logs live there. Races and routes get posted when I remember.</small>
+        </div>
       );
     }
 
@@ -360,7 +362,7 @@
       const total2025 = sum(TRAINING.filter(d=>d.week.startsWith("2025")), "miles");
       const races2025 = RACES.filter(r=>r.dateISO.startsWith("2025")).length;
       const raceMilesAll = sum(RACES, "distance");
-      const fastest = minBy(RACES, r => r.finishSeconds/r.distance); // fastest pace race
+      const fastest = minBy(RACES, r => r.finishSeconds/r.distance);
       const fastestPace = fastest.finishSeconds/fastest.distance;
 
       return (
@@ -376,12 +378,7 @@
             <MilesBarChart data={TRAINING} />
           </div>
 
-          <div className="react-card">
-            <div style={{fontSize:13, fontWeight:700, color:"#374151", marginBottom:8}}>Medals</div>
-            <div className="react-medals">
-              {RACES.filter(r=>r.medal).map(r => <MedalCard key={r.id} race={r} />)}
-            </div>
-          </div>
+          <StravaCard/>
         </div>
       );
     }
